/** The states a request holds. A request is decided once. */
export type RequestStatus = 'Pending' | 'Accepted' | 'Declined';
