@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Accept a request
class ListingRequest {
  +Guid Id
  +Guid ListingId
  +Guid RequesterId
  +string Message
  +RequestStatus Status
  +byte[] RowVersion
  +Accept(asOf: DateTimeOffset): void
  +Decline(asOf: DateTimeOffset): void
}
class LoanRequestTerms {
  +DateOnly PickupOn
  +DateOnly ReturnBy
}
enum RequestStatus {
  Pending
  Accepted
  Declined
}
class MessageThread {
  +Guid RequestId
  +Guid ListingId
  +Guid OwnerId
  +Guid RequesterId
  +IsParty(memberId: Guid): bool
}
ListingRequest --> RequestStatus : holds
ListingRequest "1" *-- "0..1" LoanRequestTerms : owns
ListingRequest "1" <-- "0..1" MessageThread : arises from acceptance

class AcceptRequestCommand {
  +Guid RequestId
}
class AcceptRequestCommandHandler {
  +Handle(command: AcceptRequestCommand): Task<AcceptRequestResult>
}
AcceptRequestCommandHandler ..> AcceptRequestCommand : handles
AcceptRequestCommandHandler --> ListingRequest : decides
@enduml
